# CursorVibe

./: .gitignore  Dockerfile  README.md  fly.toml  frontend.py  main.py  pyproject.toml
api/: sayings.py
repositories/: base_repository.py  sayings_repository.py
static/: global.css  index.js
templates/: index.html
