[project]
name = "cursorvibe"
version = "0.1.0"
description = ""
authors = [
    {name = "C. Filipe Medeiros",email = "c.filipe.medeiros@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.1"

